<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>peakokk</groupId>
	<artifactId>peakokk</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>peakokk</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>3.1.0.RELEASE</spring.version>
		<slf4j.version>1.6.1</slf4j.version>
		<spring.security.version>3.0.8.RELEASE</spring.security.version>
	</properties>

	<modules>
		<module>controller</module>
		<module>service</module>
		<module>persistence</module>
    <module>common</module>
  </modules>

	<dependencies>
            
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>org.springframework.context</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<!-- Exclude Commons Logging in favor of SLF4j -->
				<exclusion>
					<groupId>org.apache.commons</groupId>
					<artifactId>com.springsource.org.apache.commons.logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>org.springframework.core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>org.springframework.oxm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>org.springframework.web	</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- Hibernate is not getting used in this project -->
		<!-- Still we have to include this library for JSR303 provider -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>4.2.0.Final</version>
		</dependency>

		<!-- AspectJ -->
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>com.springsource.org.aspectj.weaver</artifactId>
			<version>1.6.8.RELEASE</version>
		</dependency>

		<!-- AOP dependency -->
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>2.2.2</version>
		</dependency>
		
		<!-- Spring security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-acl</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<!-- Spring File Upload Dependency -->
		<!-- Apache Commons Upload -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.2.2</version>
		</dependency>

		<!-- Apache Commons Upload -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.org.apache.commons.logging</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.log4j</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.8</version>
		</dependency>
		<!-- Jackson JSON Mapper -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.11</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-core-asl</artifactId>
			<version>1.9.11</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-jaxrs</artifactId>
			<version>1.9.11</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-xc</artifactId>
			<version>1.9.11</version>
		</dependency>		
		<!-- Tuckey URL rewritte filter dependency -->
		<dependency>
    		<groupId>org.tuckey</groupId>
    		<artifactId>urlrewritefilter</artifactId>
    		<version>4.0.3</version>
		</dependency>
		
		<dependency>
	      <groupId>oauth.signpost</groupId>
	      <artifactId>signpost-core</artifactId>
	      <version>1.2.1.1</version>
	    </dependency>	    
	    <dependency>
	      <groupId>oauth.signpost</groupId>
	      <artifactId>signpost-commonshttp4</artifactId>
	      <version>1.2.1.1</version>
	    </dependency>
		<!-- JUNIT Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>com.springsource.repository.bundles.release</id>
			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</repository>
		<repository>
			<id>spring-snapshot</id>
			<name>SpringSource Snapshot Repository</name>
			<url>http://repo.springsource.org/libs-snapshot</url>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.external</id>
			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
			<url>http://repository.springsource.com/maven/bundles/external</url>
		</repository>
		<repository>
			<id>jboss - public</id>
			<name>jboss - public</name>
			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
		</repository>

		<!-- <repository> <id>camunda</id> <url>http://fox.camunda.com/mvn/</url> 
			</repository> -->
		<repository>
			<id>jsch.sf.net</id>
			<url>http://jsch.sf.net/maven2/</url>
		</repository>
		<repository>
			<id>repo2.maven.org</id>
			<url>http://repo2.maven.org/maven2</url>
		</repository>

	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<verbose>true</verbose>
					<source>1.6</source>
					<target>1.6</target>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			
			  <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
				       <encoding>UTF-8</encoding>
				 </configuration>
			 </plugin> 

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128m</argLine>
					<failIfNoTests>false</failIfNoTests>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>install</id>
						<phase>install</phase>
						<goals>
							<goal>sources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>tomcat-maven-plugin</artifactId>
				<version>1.0</version>
				<configuration>
					<warFile>target/peakokk.war</warFile>
					<server>peakokkserver</server>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<!-- Profiles -->
	<profiles>
		<profile>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<id>default</id>
			<properties>
				<!-- DB Connection -->
				<db.jdbc.url>jdbc:mysql://localhost:3306/peakokk</db.jdbc.url>
				<db.jdbc.username>root</db.jdbc.username>
				<db.jdbc.password></db.jdbc.password>
				
				<!-- Groupon configuration -->
				<groupon.client.id>93e9598d1ac2d5eca3017dee020980eb2ad8e87b</groupon.client.id>
				<groupon.deals.isdefault.radius>false</groupon.deals.isdefault.radius>
				<groupon.deals.radius.overridden.value>25000</groupon.deals.radius.overridden.value>
				<groupon.division.api.url>http://api.groupon.com/v2/divisions?client_id={clientId}</groupon.division.api.url>
				<groupon.deals.api.url>http://api.groupon.com/v2/deals?client_id={clientId}</groupon.deals.api.url>
				<groupon.deals.bydivisionsid.api.url>http://api.groupon.com/v2/deals?client_id={clientId}&amp;division_id={divisionId}</groupon.deals.bydivisionsid.api.url>
				<groupon.deals.bylatlng.api.url>http://api.groupon.com/v2/deals?client_id={clientId}&amp;lng={longitude}&amp;lat={lattitude}&amp;radius={radius}</groupon.deals.bylatlng.api.url>
				<groupon.deal.post.api.url>http://api.groupon.com/v2/deals/{dealId}/posts?client_id={clientId}</groupon.deal.post.api.url>
				<groupon.deal.image.api.url>https://api.groupon.com/v2/deals/{dealId}/images?client_id={clientId}</groupon.deal.image.api.url>
				<groupon.says.api.url>http://api.groupon.com/v2/groupon_says?client_id={clientId}</groupon.says.api.url>
				
				<!-- smtp email -->
				<sender.name>Peakokk</sender.name>
				<sender.email>support@peakokk.com</sender.email>
				<mail.smtp.loginid>support@peakokk.com</mail.smtp.loginid>
				<mail.smtp.password>Sj@Do0n</mail.smtp.password>
				<mail.smtp.host.value>smtpout.secureserver.net</mail.smtp.host.value>
				<mail.smtp.port.num>25</mail.smtp.port.num>
								
			</properties>
		</profile>		
	</profiles>
</project>